{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "CameraControl",
            "id": "f6315391-c877-4d60-b7d8-0875908b3765",
            "actions": [
                {
                    "name": "CameraRotate",
                    "type": "Value",
                    "id": "5fd7f542-061f-405b-a981-42bf9820829f",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "RotationVector",
                    "id": "6eabeae4-1828-4275-a4e7-3209ef082577",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraRotate",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Negative",
                    "id": "fbf0b777-eb71-4972-ae53-9ac453b6b4b7",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard_Mouse",
                    "action": "CameraRotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Positive",
                    "id": "de3aeb51-8e1f-45b7-b533-7589d1d63a7a",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard_Mouse",
                    "action": "CameraRotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard_Mouse",
            "bindingGroup": "Keyboard_Mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Mobile",
            "bindingGroup": "Mobile",
            "devices": [
                {
                    "devicePath": "<Touchscreen>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}